--- a/ui/static/css/style.css
+++ b/ui/static/css/style.css
@@ -13,23 +13,31 @@ body {
   padding: 24px;
 }
 
-.navbar {
-  padding-bottom: 8px;
-  margin-bottom: 16px;
-  border-bottom: 1px solid black;
-  display: flex;
-  align-items: center;
-}
-
 h3 {
   margin-bottom: 16px;
+}
+
+input {
+  padding: 4px;
 }
 
 label {
   margin-bottom: 8px;
 }
 
-button {
+/* WRAPPER */
+.wrapper {
+  display: flex;
+}
+
+@media only screen and (max-width: 640px) {
+  .wrapper {
+    flex-direction: column;
+  }
+}
+
+/* BUTTON */
+.button {
   padding: 4px 24px;
   cursor: pointer;
 }
@@ -40,28 +48,37 @@ button {
   gap: 8px;
 }
 
-input {
-  padding: 4px;
-}
-
-.wrapper {
+/* NAVBAR */
+.navbar {
+  padding-bottom: 8px;
+  margin-bottom: 16px;
+  border-bottom: 1px solid black;
   display: flex;
+  align-items: center;
 }
 
-.add-product-form {
-  padding: 24px;
-  width: 480px;
+.navbar-icon {
+  height: 64px;
+  width: 64px;
+  margin-right: 16px;
 }
 
-.edit-product-form {
-  padding: 24px;
-  width: 480px;
-}
-
-.add-product-form-field {
+/* FORM */
+.product-form-field {
   display: flex;
   flex-direction: column;
   margin-bottom: 16px;
+}
+
+.product-form {
+  padding: 24px;
+  width: 480px;
+}
+
+/* ITEM LIST */
+.product-item-list {
+  padding: 24px;
+  margin-left: 24px;
 }
 
 .product-item {
@@ -72,20 +89,9 @@ input {
   margin-bottom: 16px;
 }
 
-.product-item-list {
-  padding: 24px;
-  margin-left: 24px;
-}
-
-.product-price-qty-tag {
+.product-item-info {
   margin-top: 8px;
   display: flex;
   flex-direction: column;
   gap: 4px;
-}
-
-.navbar-icon {
-  height: 64px;
-  width: 64px;
-  margin-right: 16px;
 }
